--- a/java_lib/pom.xml
+++ b/java_lib/pom.xml
@@ -2,11 +2,11 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.codewave.hellolib</groupId>
-    <artifactId>helloLib</artifactId>
+    <groupId>com.codewave.xiaranGroup</groupId>
+    <artifactId>testHelloArtfactLib</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
-    <name>helloLib</name>
+    <name>testJosephLib</name>
 
     <url>http://maven.apache.org</url>
 
