--- a/java_lib/pom.xml
+++ b/java_lib/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.codewave</groupId>
     <artifactId>helloLib</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.5</version>
     <name>helloLib</name>
 
     <url>http://maven.apache.org</url>
@@ -56,7 +56,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
