--- a/connector/redis_connector/pom.xml
+++ b/connector/redis_connector/pom.xml
@@ -32,10 +32,11 @@
         </dependency>
 
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>3.7.0</version>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>6.5.2.RELEASE</version>
         </dependency>
+
     </dependencies>
 
     <build>
