--- a/example/java_lib/pom.xml
+++ b/example/java_lib/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.codewave</groupId>
     <artifactId>helloLib</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.14</version>
+    <version>1.0.15</version>
     <name>helloLib</name>
 
     <url>http://maven.apache.org</url>
@@ -23,7 +23,10 @@
             <version>0.12.0</version>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
